[project]
name = "infraindex-worker"
version = "0.1.0"
description = "InfraIndex Collection Worker"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.3.6",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"
